# The_Practice_of_Deep_Learning_Biomedical_Image_analysis_Final_Exam

./: .gitignore  LICENSE  README.md  pyproject.toml
perplexity/: all_indicators.py  all_indicators_chatgpt.py  breast_ultrasound_classification.py  config.py  data_preprocessing.py  main.py
src/: CNN.ipynb  CNN.py  CNN_patched.ipynb  multi_preprocess.py
