[project]
name = "the-practice-of-deep-learning-biomedical-image-analysis-final-exam"
version = "0.1.0"
description = ""
authors = [
    {name = "DoSerZBlock",email = "63659999+DoSerZBlock@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "decouple (>=0.0.7,<0.0.8)",
    "kagglehub (>=0.3.12,<0.4.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
